# Edge-ViT-Satellite-Inference

./: .gitignore  CMakeLists.txt
src/cpp/: main.cpp
src/python/: export_vit_onnx.py  fine_tune.py  quantize_onnx.py
